[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reelfarm-mcp"
version = "0.1.1"
description = "MCP server for the ReelFarm API — create slideshows, manage automations, publish to TikTok, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ahmad", email = "ahmad@techtinker.co" },
]
keywords = ["mcp", "reelfarm", "tiktok", "automation", "slideshows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
reelfarm-mcp = "reelfarm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reelfarm_mcp"]
